--- a/BayTetra code/NAMESPACE
+++ b/BayTetra code/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(Rcpp,sourceCpp)
 importFrom(loo,loo)
 importFrom(pracma,householder)
 importFrom(splines,bs)
+importFrom(stats,dnorm)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,rbeta)
