--- a/BayTetra/NAMESPACE
+++ b/BayTetra/NAMESPACE
@@ -2,17 +2,15 @@
 
 S3method(summary,Test_BayTetra)
 export(Generate_simulated_data)
-export(Model_selection_BayTetra)
 export(Test_BayTetra)
 export(mcmc_BayTetra)
 import(truncnorm)
+importFrom(GIGrvg,rgig)
 importFrom(MASS,mvrnorm)
 importFrom(MCMCpack,rinvgamma)
 importFrom(Rcpp,sourceCpp)
-importFrom(loo,loo)
 importFrom(pracma,householder)
 importFrom(splines,bs)
-importFrom(stats,dnorm)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,rbeta)
